--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@cds/core": "^5.3.0",
+    "@clr/angular": "^5.3.0",
+    "@clr/icons": "^5.3.0",
+    "@clr/ui": "^5.3.0",
+    "@webcomponents/webcomponentsjs": "^2.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
